<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_text_view"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/edit_text_login_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_hint_text_btn"/>


    <EditText
        android:id="@+id/edit_text_password_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint_text_btn"
        android:inputType="textPassword" />

    <Button
        android:layout_marginTop="8dp"
        android:id="@+id/btn_enter_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_text_btn"/>
</LinearLayout>